--- a/css/gallery.css
+++ b/css/gallery.css
@@ -97,7 +97,7 @@ section{
     /* background: #888; */
     /* float: left; */
     position: relative;
-    overflow:scroll;
+    overflow:scroll; 
     text-align: center;
 }
   #gallery h2{
@@ -119,7 +119,7 @@ section{
     display: block;
     padding: 10px;
     overflow: hidden;
-    /* background: #ccc; */
+    /* border:1px solid rgba(0, 0, 0, 0.1); */
   }
   .m-list a:hover img{
     transform: scale(1.1);
